--- a/bolixir/style.css
+++ b/bolixir/style.css
@@ -20,7 +20,7 @@ a {
 }
 
 header {
-  height: 150px;
+  height: 90px;
   width: 100%;
 }
 
@@ -52,5 +52,88 @@ header .top a {
   width: -moz-fit-content;
   width: fit-content;
   display: block;
+}
+
+header .bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+header .bottom div {
+  width: 1300px;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+header .bottom div .right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+}
+
+header .bottom div .icon__bag {
+  margin-left: 20px;
+}
+
+@media (max-width: 1300px) {
+  header .bottom div {
+    width: 1000px;
+  }
+}
+
+@media (max-width: 1000px) {
+  header .bottom div {
+    width: 800px;
+  }
+}
+
+@media (max-width: 800px) {
+  header .bottom div {
+    width: 600px;
+  }
+}
+
+@media (max-width: 600px) {
+  header .bottom div {
+    width: 300px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  header .bottom div .right {
+    width: 100% !important;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: unset;
+    -webkit-box-direction: unset;
+        -ms-flex-direction: unset;
+            flex-direction: unset;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+  header .bottom div .right .icon__bag {
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+  }
+  header .bottom div .right .icon__login {
+    -ms-flex-item-align: end;
+        align-self: flex-end;
+  }
 }
 /*# sourceMappingURL=style.css.map */
