--- a/bolixir/style.scss
+++ b/bolixir/style.scss
@@ -25,7 +25,7 @@ a {
 }
 
 header {
-    height: 150px;
+    height: 90px;
     width: 100%;
     .top {
         display: flex;
@@ -44,6 +44,64 @@ header {
             padding-left: 20px;
             width:fit-content;
             display: block;
+        }
+    }
+
+    .bottom {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        div {
+            width: 1300px;
+            margin: auto;
+            display: flex;
+            align-items: center;
+            .right {
+                display: flex;
+                justify-content: end;
+            }
+            .icon__bag {
+                margin-left: 20px;
+            }
+        }
+    }
+}
+
+@media (max-width: 1300px) {
+
+    header .bottom div {
+        width: 1000px;
+    }
+}
+
+@media (max-width: 1000px) {
+    header .bottom div {
+        width: 800px;
+    }
+}
+@media (max-width: 800px) {
+    header .bottom div {
+        width: 600px;
+    }
+}
+
+@media (max-width: 600px) {
+    header .bottom div {
+        width: 300px;
+        flex-direction: column-reverse;
+    }
+    header .bottom div .right {
+        width: 100% !important;
+        display: flex;
+        flex-direction:unset;
+        justify-content: space-between;
+        margin-bottom: 20px;
+        margin-top: 20px;
+        .icon__bag {
+            align-self: flex-start;
+        }
+        .icon__login {
+            align-self: flex-end;
         }
     }
 }
