--- a/bolixir/style.scss
+++ b/bolixir/style.scss
@@ -5,7 +5,6 @@
 
 body {
     box-sizing: border-box;
-    font-family: "brandon-grotesque";
 }
 
 a {
@@ -25,15 +24,17 @@ a {
 }
 
 header {
-    height: 90px;
     width: 100%;
+    height: 125px;
     .top {
         display: flex;
+        font-family: "brandon-grotesque";
         flex-wrap: wrap;
         width: 100%;
-        height: auto;
+        height: 40px;
         background-color: black;
         text-align: center;
+        font-size: 16px;
         color: white;
         justify-content: center;
         align-items: center; 
@@ -50,10 +51,11 @@ header {
     .bottom {
         display: flex;
         width: 100%;
-        height: 100%;
+        height: 85px;
+        justify-content: center;
+        align-items: center;
         div {
             width: 1300px;
-            margin: auto;
             display: flex;
             align-items: center;
             .right {
@@ -67,23 +69,35 @@ header {
     }
 }
 
+.intro {
+    width: 100%;
+    height: 880px;
+    position: relative;
+    .img {
+        width: 100%;
+        height: 100%;
+        background-image: url(img/bottles.png);
+        background-size: cover;
+        background-position: center;
+        filter: brightness(70%);
+    }
+    .bglogo {
+        position: absolute;
+        width: 200px;
+        left: 50%;
+        translate: (-50%);
+        top: 160px;
+    }
+
+}
+
 @media (max-width: 1300px) {
 
     header .bottom div {
-        width: 1000px;
+        width: 100%; 
     }
 }
 
-@media (max-width: 1000px) {
-    header .bottom div {
-        width: 800px;
-    }
-}
-@media (max-width: 800px) {
-    header .bottom div {
-        width: 600px;
-    }
-}
 
 @media (max-width: 600px) {
     header .bottom div {
