--- a/bolixir/style.css
+++ b/bolixir/style.css
@@ -123,8 +123,21 @@ header .bottom div .icon__bag {
 }
 
 @media (max-width: 600px) {
+  .intro .img {
+    margin-top: 100px;
+    display: block;
+  }
+  header .top {
+    height: auto;
+  }
+  header .bottom {
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+    width: 100%;
+  }
   header .bottom div {
-    width: 300px;
+    width: 100%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
         -ms-flex-direction: column-reverse;
@@ -148,10 +161,12 @@ header .bottom div .icon__bag {
   header .bottom div .right .icon__bag {
     -ms-flex-item-align: start;
         align-self: flex-start;
+    margin-right: 20px;
   }
   header .bottom div .right .icon__login {
     -ms-flex-item-align: end;
         align-self: flex-end;
+    margin-left: 20px;
   }
 }
 /*# sourceMappingURL=style.css.map */
