--- a/bolixir/style.css
+++ b/bolixir/style.css
@@ -15,7 +15,30 @@ a {
 
 @font-face {
   font-family: "brandon-grotesque";
-  src: url("fonts/brandon-grotesque-black-58a8a3e824392.otf") format("opentype"), url("fonts/brandon-grotesque-bold-italic-58a8a48221563.otf") format("opentype"), url("fonts/brandon-grotesque-light-58a8a4b38001d.otf") format("opentype"), url("fonts/brandon-grotesque-light-italic-58a8a4ccb88be.otf") format("opentype"), url("fonts/brandon-grotesque-medium-italic-58a8a3c40866a.otf") format("opentype"), url("fonts/brandon-grotesque-regular-italic-58a8a456c4724.otf") format("opentype"), url("fonts/brandon-grotesque-thin-italic-58a8a3a8861fe.otf") format("opentype");
+  src: url("fonts/brandon/brandon-grotesque-black-58a8a3e824392.otf") format("opentype"), url("fonts/brandon/brandon-grotesque-bold-italic-58a8a48221563.otf") format("opentype"), url("fonts/brandon/brandon-grotesque-light-58a8a4b38001d.otf") format("opentype"), url("fonts/brandon/brandon-grotesque-light-italic-58a8a4ccb88be.otf") format("opentype"), url("fonts/brandon/brandon-grotesque-medium-italic-58a8a3c40866a.otf") format("opentype"), url("fonts/brandon/brandon-grotesque-regular-italic-58a8a456c4724.otf") format("opentype"), url("fonts/brandon/brandon-grotesque-thin-italic-58a8a3a8861fe.otf") format("opentype");
+}
+
+@font-face {
+  font-family: "losta-masta";
+  src: url("fonts/losta/Fontspring-DEMO-lostamasta-black.otf") format("opentype"), url("fonts/losta/Fontspring-DEMO-lostamasta-bold.otf") format("opentype"), url("fonts/losta/Fontspring-DEMO-lostamasta-extrabold.otf") format("opentype"), url("fonts/losta/Fontspring-DEMO-lostamasta-light.otf") format("opentype"), url("fonts/losta/Fontspring-DEMO-lostamasta-ornaments.otf") format("opentype");
+}
+
+@font-face {
+  font-family: "losta-masta";
+  src: url("fonts/losta/Fontspring-DEMO-lostamasta-regular.otf") format("opentype");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "aglat-slab";
+  src: url("fonts/aglab/Torrent Graphic SSi Regular.ttf") format("opentype");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "aglat-slab";
+  src: url("fonts/aglab/Torrent Graphic SSi Semi Bold.ttf");
+  font-weight: 500;
 }
 
 header {
@@ -108,24 +131,134 @@ header .bottom div .icon__bag {
           filter: brightness(70%);
 }
 
-.intro .bglogo {
+.intro .innerimg {
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
   position: absolute;
-  width: 200px;
+  width: 900px;
+  text-align: center;
   left: 50%;
   translate: -50%;
   top: 160px;
+}
+
+.intro .innerimg img {
+  width: 200px;
+  display: block;
+  margin: auto;
+}
+
+.intro .innerimg .p1 {
+  font-family: "losta-masta";
+  font-weight: 400;
+  font-size: 45px;
+  line-height: 47px;
+  color: white;
+  letter-spacing: 2.5px;
+  margin-top: 30px;
+}
+
+.intro .innerimg .p2 {
+  margin-top: 37px;
+  font-size: 18px;
+  color: white;
+  font-family: "aglat-slab";
+}
+
+.intro .innerimg button {
+  width: 215px;
+  height: 56px;
+  font-family: "aglat-slab";
+  font-size: 16px;
+  line-height: 56px;
+  border-radius: 5px;
+  margin-top: 34px;
+  background-color: #5C1D80;
+  text-align: center;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+.intro .innerimg .boxes {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: auto;
+  width: 600px;
+  margin-top: 70px;
+  border: 2px solid red;
+}
+
+.intro .innerimg .boxes .box {
+  position: relative;
+}
+
+.intro .innerimg .boxes .box img {
+  max-width: 90px;
+  max-height: 90px;
+}
+
+.intro .innerimg .boxes .box p {
+  top: 100px;
+  position: absolute;
+  color: white;
+  font-family: "aglat-slab";
+  font-weight: 500;
+}
+
+.intro .innerimg .boxes .box p span {
+  font-weight: 400;
+}
+
+@media (max-width: 1000px) {
+  .intro .innerimg .boxes {
+    width: 100% !important;
+  }
 }
 
 @media (max-width: 1300px) {
   header .bottom div {
     width: 100%;
   }
+  .intro {
+    overflow: hidden;
+  }
+  .intro .innerimg {
+    width: 100% !important;
+    top: 50px;
+  }
+  .intro .img {
+    background-size: cover;
+  }
 }
 
 @media (max-width: 600px) {
   .intro .img {
-    margin-top: 100px;
     display: block;
+    border: 2px solid red;
+    z-index: -1;
+    padding-top: 100px;
+    scale: 2;
+  }
+  .intro .innerimg {
+    top: 130px;
+  }
+  .intro .innerimg .boxes {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .intro .innerimg .boxes .box {
+    width: 100%;
+  }
+  header {
+    height: auto;
+    padding-bottom: 20px;
+    border: 2px solid black;
   }
   header .top {
     height: auto;
