--- a/bolixir/style.scss
+++ b/bolixir/style.scss
@@ -198,26 +198,67 @@ header {
     width: 100%;
     display: flex;
     height: 1000px;
+    display: flex;
+    flex-wrap: wrap;
     .left {
         width: 50%;
-        text-align: center;
         img {
+            margin: auto;
+            display: block;
             top: 0;
             position: sticky;
-            scale: 1.05;
         }
     }
     .right {
+        div {
+            width: 60%;
+            margin-left: 70px;
+        }
         h1 {
             font-size: 38px;
             color: #682E8A;
             margin-top: 50px;
-            margin-left: 70px;
             font-family: "losta-masta";
         }
-        p {
-            margin-left: 70px;
-            width: 50%;
+        h3 {
+            margin-top: 20px;
+            color: #8C8778;
+        }
+
+        div {
+            div {
+                margin-left: 0;
+                display: flex;
+                width: min-content;
+                margin-top: 20px;
+                .circle {
+                    margin-right: 30px;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 50%;
+                    border: 2px solid black;
+                    font-size: 15px;
+                    line-height: 80px;
+                    text-align: center;
+                }
+            }
+
+            h2 {
+                margin-top: 20px;
+                font-size: 30px;
+            }
+
+            .p2 {
+                margin-top: 20px;
+            }
+
+            input {
+                background-color: #5C1D80;
+                width: 150px;
+                height: 50px;
+                margin-top: 20px;
+                color: white;
+            }
         }
         width: 50%;
         font-weight: 400;
@@ -232,6 +273,26 @@ header {
 @media (max-width: 1300px) {
     header .bottom div{
             width: 100%;
+    }
+
+    .second {
+        height: min-content;
+        .left, .right {
+            width: 100%;
+        }
+
+        .right div {
+            p, h1 {
+                margin: 10px;
+            }
+            width: 100%;
+        }
+
+        .left {
+            img {
+                position: unset;
+            }
+        }
     }
 }
 
@@ -283,6 +344,28 @@ header {
             }
         }
     }
+
+    .second {
+        margin-top: 200px;
+        .left {
+            display: flex;
+            justify-content: flex-start;
+            img {
+                width: 100%;
+                height: auto;
+                margin: 0;
+                display: block;
+            }
+        }
+        .right {
+            div {
+                margin-left: 0;
+                width: 100%;
+                border: 2px solid red;
+            }
+        }
+    }
+
 
     header {
         height: auto;
