--- a/self-portrait/style.scss
+++ b/self-portrait/style.scss
@@ -76,6 +76,19 @@ header {
             border-left: 1px solid black;
         }
     }
+
+    .logo {
+        position: absolute;
+        top: 100px;
+        left: 50px;
+        width: 40px;
+        font-weight: bold;
+        p {
+            font-size: 25px;
+            line-height: 25px;
+            text-transform: lowercase;
+        }
+    }
 }
 
 .tab {
@@ -108,4 +121,20 @@ header {
             }
         }
     } 
+}
+
+@media (max-width: 1100px) {
+    header {
+        background-color: transparent;
+        border: 0;
+        .logo {
+            top: 20px;
+            left: 10px;
+        }
+        .left {
+            .tab {
+                display: none;
+            }
+        }
+    }
 }
