--- a/self-portrait/style.scss
+++ b/self-portrait/style.scss
@@ -5,7 +5,7 @@
 
 body {
     box-sizing: border-box;
-    font-family: "Helvetica Neue",Helvetica,Arial;
+    font-family: "Helvetica Neue", Helvetica, Arial;
 }
 
 a {
@@ -14,7 +14,7 @@ a {
 }
 
 header {
-    position: fixed;
+    position: relative;
     width: 100%;
     height: 60px;
     line-height: 60px;
@@ -22,19 +22,24 @@ header {
     text-transform: uppercase;
     font-size: 13px;
     display: flex;
+    flex-wrap: wrap;
+
     .left {
-        width: auto;
+        width: 60%;
         height: 100%;
         white-space: nowrap;
         display: flex;
+
         a {
             display: block;
             margin-left: 35px;
         }
     }
+
     .right {
-        width: 100%;
+        width: 40%;
         text-align: right;
+
         .medium {
             display: none;
             width: 100%;
@@ -42,6 +47,7 @@ header {
             text-align: right;
             font-size: 20px;
             white-space: nowrap;
+
             i {
                 margin-right: 20px;
             }
@@ -50,6 +56,7 @@ header {
                 margin-right: 50px;
             }
         }
+
         .large {
             display: flex;
             width: 100%;
@@ -58,13 +65,16 @@ header {
             text-align: right;
 
         }
+
         a {
             margin-right: 50px;
             display: block;
         }
+
         .bag {
             display: flex;
             justify-content: center;
+
             a {
                 margin: 0;
                 width: min-content;
@@ -77,22 +87,30 @@ header {
         }
     }
 
+
     .logo {
         position: absolute;
-        top: 100px;
-        left: 50px;
-        width: 40px;
+        width: 40%;
+        top: 50px;
+        height: 60px;
         font-weight: bold;
+        z-index: 100000;
+
         p {
-            font-size: 25px;
-            line-height: 25px;
+            font-size: 36px;
+            line-height: 36px;
             text-transform: lowercase;
+            width: 100px;
+            margin-left: 50px;
+            margin-top: 50px;
         }
     }
+
 }
 
 .tab {
     position: relative;
+
     &::before {
         position: absolute;
         content: "";
@@ -110,30 +128,99 @@ header {
     }
 }
 
-@media (max-width: 1300px){
+.first {
+    width: 100%;
+    z-index: -1;
+    height: auto;
+    border: 2px solid purple;
+    position: relative;
+    img {
+        z-index: -2;
+        width: 100%;
+        height: min-content;
+    }
+    a {
+        cursor: pointer;
+        z-index: 21312312;
+        color: red;
+    }
+    .text {
+        position: absolute;
+        width: 40%;
+        height: 50%;
+        max-width: 500px;
+        border: 2px solid red;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: 0px;
+        text-align: center;
+        color: white;
+        h1 {
+            font-size: 80px;
+            font-weight: 400;
+        }
+    }
+}
+
+.mobile-header {
+    display: none;
+}
+
+
+@media (max-width: 1300px) {
     header {
         .right {
             .large {
                 display: none;
             }
+
             .medium {
                 display: block;
             }
         }
-    } 
+    }
+
+    .first {
+        .text {
+            h1 {
+                font-size: 60px;
+            }
+        }
+    }
 }
 
 @media (max-width: 1100px) {
     header {
+        display: none;
+    }
+    .mobile-header {
+        display: flex;
+        width: 100%;
+        height: 80px;
+        position: fixed;
         background-color: transparent;
-        border: 0;
-        .logo {
-            top: 20px;
-            left: 10px;
-        }
         .left {
-            .tab {
-                display: none;
+            display: flex;
+            width: 50%;
+            align-items: center;
+            margin-top: 33px;
+            p {
+                font-weight: bold;
+                font-size: 35px;
+                width: 50px;
+                margin-left: 20px;
+            }
+            
+        }
+        .right {
+            width: 50%;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            i {
+                margin-right: 25px;
+                display: block;
+                font-size: 30px;
             }
         }
     }
